docs: fix formatting, add notes on YAML booleans, JDBC path, sourceColumn, commit retry